--- a/st_mgt/templates/users/login.html
+++ b/st_mgt/templates/users/login.html
@@ -3,9 +3,10 @@
 <html>
 <head>
     <title >Login</title>
+    <link rel = "stylesheet" href = " {%static 'css/login_style.css' %} ">
 </head>
 <body>
-    <h2 >Login</h2>
+    <h2 >LOGIN</h2>
     {% if messages %}
         {% for message in messages %}
             <p style="color:red">{{ message }}</p>
