--- a/st_mgt/templates/users/login.html
+++ b/st_mgt/templates/users/login.html
@@ -2,20 +2,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title >Login</title>
-    <link rel = "stylesheet" href = " {%static 'css/login_style.css' %} ">
+    <title>Login</title>
+    <link rel="stylesheet" href="{% static 'css/login_style.css' %}">
 </head>
 <body>
-    <h2 >LOGIN</h2>
-    {% if messages %}
-        {% for message in messages %}
-            <p style="color:red">{{ message }}</p>
+    <h2>LOGIN</h2>
+
+    {% if form.non_field_errors %}
+    <div class="error-message">
+        {% for error in form.non_field_errors %}
+            <p >{{ error }} </p>
         {% endfor %}
-    {% endif %}
+    {%endif%}
+    </div>
+
     <form method="POST">
         {% csrf_token %}
-        <input type="text" name="username" placeholder="Username" required><br>
-        <input type="password" name="password" placeholder="Password" required><br>
+
+        <div class="form-group">
+            {{ form.username }}
+            {{ form.username.errors }}
+        </div>
+
+        <div class="form-group">
+            {{ form.password }}
+            {{ form.password.errors }}
+        </div>
+
         <button type="submit">Login</button>
     </form>
 </body>
