--- a/st_mgt/templates/users/admin_dashboard.html
+++ b/st_mgt/templates/users/admin_dashboard.html
@@ -15,7 +15,7 @@
             </ul>
         {% endif %}
     <div id="welcome">
-        Greetings : {{ request.user.username }}
+        Greetings : {{ request.user.first_name }} {{ request.user.last_name }} ({{ request.user.username }})
     </div>
     <nav id="profile_menu">
         <div class="topmenu">
