--- a/st_mgt/templates/users/faculty_dashboard.html
+++ b/st_mgt/templates/users/faculty_dashboard.html
@@ -1,2 +1,2 @@
-<h2>Welcome {{ request.user.username }}</h2>
+<h2>Welcome : {{ request.user.first_name }} {{ request.user.last_name }} ({{ request.user.username }})</h2>
 <a href="{% url 'logout' %}">Logout</a>
