--- a/st_mgt/templates/students/student_list.html
+++ b/st_mgt/templates/students/student_list.html
@@ -1,22 +1,34 @@
-<form method="GET" action="">
-    <input type="text" name="q" placeholder="Search students..." value="{{ q }}">
-    <button type="submit">Search</button>
-  </form>
-  
-  <table>
-    <tr><th>Username</th><th>Roll No.</th><th>Action</th></tr>
-    {% for student in students %}
-      <tr>
-        <td>{{ student.user.username }}</td>
-        <td>{{ student.register_no }}</td>
-        <td>
-          <a href="{% url 'manage_student' student.id %}">
-            Manage
-          </a>
-        </td>
-      </tr>
-    {% empty %}
-      <tr><td colspan="3">No students found.</td></tr>
-    {% endfor %}
-  </table>
-  
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Manage Students</title>
+    <link rel="stylesheet" href="{% static 'css/admin_styles.css' %}">
+</head>
+<body>
+
+    <form method="GET" action="">
+        <input type="text" name="q" placeholder="Search students..." value="{{ q }}">
+        <button type="submit">Search</button>
+    </form>
+
+    <table>
+        <tr><th>Username</th><th>Roll No.</th><th>Action</th></tr>
+        {% for student in students %}
+        <tr>
+            <td>{{ student.user.username }}</td>
+            <td>{{ student.register_no }}</td>
+            <td>
+                <a href="{% url 'manage_student' student.id %}">
+                    Manage
+                </a>
+            </td>
+        </tr>
+        {% empty %}
+        <tr><td colspan="3">No students found.</td></tr>
+        {% endfor %}
+    </table>
+
+</body>
+</html>
