--- a/st_mgt/templates/faculty/faculty_list.html
+++ b/st_mgt/templates/faculty/faculty_list.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Faculty List</title>
-    <link rel="stylesheet" href="{% static 'css/admin_style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/admin_styles.css' %}">
 </head>
 <body>
     <h1>Faculty List</h1>
