--- a/st_mgt/templates/users/manage_faculty.html
+++ b/st_mgt/templates/users/manage_faculty.html
@@ -2,8 +2,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Manage {{faculty.user.first_name }} {{ faculty.user.last_name }}</title>
-  <link rel="stylesheet" href="{% static 'css/admin_style.css' %}">
+  <link rel="stylesheet" href="{% static 'css/admin_styles.css' %}">
 </head>
 <body>
   <h1>Manage {{ faculty.user.first_name }} {{ faculty.user.last_name }} ({{ faculty.user.username }})</h1>
