--- a/st_mgt/templates/users/manage_faculty.html
+++ b/st_mgt/templates/users/manage_faculty.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>Manage {{faculty.user.first_name }} {{ faculty.user.last_name }}</title>
-  <link rel="stylesheet" href="{% static 'css/admin_style.css' %}">
+  <link rel="stylesheet" href="{% static 'css/admin_styles.css' %}">
 </head>
 <body>
   <h1>Manage {{ faculty.user.first_name }} {{ faculty.user.last_name }} ({{ faculty.user.username }})</h1>
