--- a/st_mgt/templates/users/manage_student.html
+++ b/st_mgt/templates/users/manage_student.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>Manage {{ student.user.first_name }} {{ student.user.last_name }}</title>
-  <link rel="stylesheet" href="{% static 'css/admin_style.css' %}">
+  <link rel="stylesheet" href= "{% static 'css/admin_styles.css' %}">
 </head>
 <body>
   <h1>Manage {{ student.user.first_name }} {{ student.user.last_name }} ({{ student.user.username }})</h1>
