Added Course and task management in admin-dashboard

--- a/st_mgt/templates/faculty/faculty_list.html
+++ b/st_mgt/templates/faculty/faculty_list.html
@@ -15,11 +15,11 @@
   
     <table>
         <tr>
-            <td>Name</td>
-            <td>Faculty ID</td>
-            <td>Department</td>
-            <td>Designation</td>
-            <td>Action</td>
+            <th>Name</th>
+            <th>Faculty ID</th>
+            <th>Department</th>
+            <th>Designation</th>
+            <th>Action</th>
         </tr>
         {% for faculty in faculties %}
             <tr>
