--- a/st_mgt/templates/users/admin_dashboard.html
+++ b/st_mgt/templates/users/admin_dashboard.html
@@ -20,9 +20,11 @@
     </div>
     <nav id="profile_menu">
         <div class="topmenu">
-            <a href="{% url 'logout' %}">Logout</a>
             <a href="{% url 'student_list' %}">Manage Students</a>
             <a href="{% url 'faculty_list' %}">Manage Faculty</a>
+            <a href="{% url 'task_list' %}">Manage Tasks</a>
+            <a href="{% url 'course_list' %}">Manage Courses</a>
+            <a href="{% url 'logout' %}">Logout</a>
         </div>
     </nav>
   <section id="Summary">
