--- a/st_mgt/templates/courses/confirm_delete.html
+++ b/st_mgt/templates/courses/confirm_delete.html
@@ -17,6 +17,8 @@
         <a href="{% url 'course_list' %}" class="cancel-button">Cancel</a>
     </form>
 
-    <p><a href="{% url 'course_list' %}">← Back to Course List</a></p>
+    <div class="back-link-container">
+        <a href="{% url 'admin_dashboard' %}" class="back-link">← Back to admin_dashboard</a>
+    </div>
 </body>
 </html> 
