--- a/st_mgt/templates/tasks/task_list.html
+++ b/st_mgt/templates/tasks/task_list.html
@@ -29,7 +29,9 @@
         <tr><td colspan="3">No tasks found.</td></tr>
         {% endfor %}
     </table>
-    <p><a href="{% url 'admin_dashboard' %}">← Back to admin_dashboard</a></p>
+    <div class="back-link-container">
+        <a href="{% url 'admin_dashboard' %}" class="back-link">← Back to admin_dashboard</a>
+    </div>
 
 </body>
 </html>
